resources/templates/eks-kubecost-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - ok
    nginx.ingress.kubernetes.io/auth-secret: kubecost-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    kubernetes.io/ingress.class: "nginx"
  labels:
    app: cost-analyzer
    app.kubernetes.io/instance: kubecost
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: cost-analyzer
    helm.sh/chart: searchcost-analyzer-1.91.2
  name: kubecost-cost-ingress
  namespace: kubecost
spec:
  rules:
    - host: cost.DOMAIN_NAME
      http:
        paths:
          - backend:
              service:
                name: kubecost-cost-analyzer
                port:
                  number: 9090
            path: /
            pathType: Prefix
